[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "git-context"
version = "1.0.0"
description = "Generate AI-friendly context for any git repo in one command"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = ["git", "ai", "context", "developer-tools"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
]

[project.urls]
Homepage = "https://github.com/promptpolish-ai/git-context"

[project.scripts]
git-context = "git_context:main"
